# AutoRewardsPC

./: .gitignore  AutoRewardsPC.spec  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-exe.yml
app/: app.py  automation.py  calibration.json  calibration.py  config.py
docs/Comercial/: AutoRewardsPC_Documentacao_Comercial.docx
docs/Guias/: Guia_Arquitetura_AutoRewardsPC.docx  Guia_Extensao_Desenvolvedor_AutoRewardsPC.docx  Guia_Release_e_Versionamento_AutoRewardsPC.docx  Guia_Suporte_e_Diagnostico_AutoRewardsPC.docx
docs/Manuais/: Manual_Tecnico_AutoRewardsPC_Profissional.docx  Manual_Usuario_AutoRewardsPC_Profissional.docx
src/: __main__.py
src/core/: controller.py  settings.py
src/domain/: __init__.py  items.py
src/ui/: app.py  calibration.py  main_window.py
